--- a/src/components/Introduction.astro
+++ b/src/components/Introduction.astro
@@ -26,10 +26,12 @@ import profilePicture from "@/assets/profile-picture.jpg";
   >
     {SITE.bio}
   </p>
-  <a
-    href="https://autogestion.guarani.unc.edu.ar/"
-    class="pt-8 text-lg font-medium uppercase text-lightModeForegroundMuted underline underline-offset-4 hover:text-lightModeForeground dark:text-darkModeForegroundMuted dark:hover:text-darkModeForeground"
-  >
-    {`Ir a Guaraní (UNC)`}
-  </a>
+  <div class="text-center pt-8">
+    <a
+      href="https://autogestion.guarani.unc.edu.ar/"
+      class="pt-8 text-lg font-medium uppercase text-lightModeForegroundMuted underline underline-offset-4 hover:text-lightModeForeground dark:text-darkModeForegroundMuted dark:hover:text-darkModeForeground"
+    >
+      {`Ir a Guaraní (UNC)`}
+    </a>
+  </div>
 </div>
