--- a/src/components/Introduction.astro
+++ b/src/components/Introduction.astro
@@ -28,10 +28,10 @@ import profilePicture from "@/assets/profile-picture.jpg";
   </p>
   <div class="text-center pt-8">
     <a
-      href="https://goalritmo.com"
+      href="https://1.goalritmo.com"
       class="pt-8 text-lg font-medium uppercase text-lightModeForegroundMuted underline underline-offset-4 hover:text-lightModeForeground dark:text-darkModeForegroundMuted dark:hover:text-darkModeForeground"
     >
-      {`Ir a la Raíz`}
+      {`Ir a Primer Año`}
     </a>
   </div>
 </div>
